--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -91,10 +91,33 @@
       <div class="container">
           <div class="intro-text">            
             <div class="intro-heading">La Taco</div>
-            <div class="intro-lead-in">Let's Taco</div>
+            <div class="intro-lead-in">I Taco You</div>
           </div>
       </div>
   </header>
+  <div class="container marketing">
+
+    <!-- Three columns of text below the carousel -->
+    <div class="row">
+      <div class="col-md-4 text-center">
+        <h2 >Signature Taco</h2>
+        <img class="img-circle" src="../../assets/images/chickenTaco.jpg" height="140px" width="140px">
+        <h2 >Ground Chicken Taco</h2>
+        <p>Ground chicken taco with our favourite cheese, sweet tomatoes, onion and pickle toppings</p>
+      </div>
+      <div class="col-md-4 text-center">
+        <h2 >Special Quesadilla</h2>
+        <img class="img-circle" src="../../assets/images/Quess.jpg" height="140px" width="140px">
+        <h2 >Chicken Quesadilla</h2>
+        <p>Combination of Monterey jack and cheddar with grilled chicken and caramelized onions</p>
+      </div>
+      <div class="col-md-4 text-center">
+        <h2 >Unlimited Toppings</h2>
+        <img class="img-circle" src="../../assets/images/salsa.jpg" height="140px" width="140px">
+        <p>Our Special corn salsa with pickled onlions and apple vinegar</p>
+      </div>
+    </div>
+  </div>
     <footer >
         <div class="container">
             <div class="row">
