--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -326,7 +326,7 @@ header {
     text-align: center;
     color: #fff;
     background-attachment: scroll;
-    background-image: url(../images/cheeseTaco.jpg);
+    background-image: url(../images/5826a4f0d015d89e449ccb2a_3a3586cafd678954c62dd411566278b8-dl9ejl.jpg);
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
