login logout route implementation with token

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -80,7 +80,7 @@
                     </li>
 
                     <li class="ngnav nav2">
-                        <a ng-show="main.isLoggedIn && main.authorized" class="page-scroll" href="/placeOrder">Order</a>
+                        <a ng-show="main.isLoggedIn" class="page-scroll" href="/placeOrder">Order</a>
                     </li>
 
                     <li class="ngnav nav2">
