--- a/public/app/views/pages/users/login.html
+++ b/public/app/views/pages/users/login.html
@@ -18,10 +18,10 @@
     <div>
         <form ng-submit="main.doLogin(loginData)">
             <label>Username </label>
-            <input class="form-control" type="text" name="username" ng-model = "register.regData.username">
+            <input class="form-control" type="text" name="username" ng-model = "main.loginData.username">
             <br>
             <label>Password </label>
-            <input class="form-control" type="password" name="password" ng-model = "register.regData.password">
+            <input class="form-control" type="password" name="password" ng-model = "main.loginData.password">
             <br>
             <button class="btn btn-primary" type="submit">Login</button>
         </form>
