--- a/public/app/views/pages/about.html
+++ b/public/app/views/pages/about.html
@@ -1,1 +1,31 @@
-<div class="Page header">Hello {{main.username}} About page route</div>
+
+<div class="box">
+  
+    <div class="card">
+      <div class="imgBx">
+          <img src="assets/images/Likhitha.jpg" alt="images">
+      </div>
+      <div class="details">
+          <h2>Likhitha Vanga<br><span>The Chef</span></h2>
+      </div>
+    </div>
+  
+     <div class="card">
+       <div class="imgBx">
+          <img src="assets/images/swetha.jpg" alt="images">
+       </div>
+       <div class="details">
+          <h2>Swetha venkatesan<br><span>The Manager</span></h2>
+        </div>
+     </div>
+
+     <div class="card">
+       <div class="imgBx">
+          <img src="assets/images/sree-vandana.jpg" alt="images">
+       </div>
+       <div class="details">
+          <h2>Sree Vandana<br><span>Business Head</span></h2>
+        </div>
+     </div>
+
+</div> 
