--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -1,1 +1,48 @@
-<div class="Page header">Hello {{main.username}} Home page route</div>
+<header class = "header-image">
+    <div class="container">
+        <div class="intro-text">            
+          <div class="intro-heading">La Taco</div>
+          <div class="intro-lead-in">I Taco You</div>
+        </div>
+    </div>
+</header>
+<div class="container marketing">
+
+  <!-- Three columns of text image -->
+  <div class="row">
+    <div class="col-md-4 text-center">
+      <h2 >Today Specials</h2>
+      <img class="img-circle" src="../../assets/images/BreakfastTaco.jpg" height="140px" width="140px">
+      <p>Ground chicken taco with our favourite cheese, sweet tomatoes, onion and pickle toppings</p>
+    </div>
+    <div class="col-md-4 text-center">
+      <h2 >Dressings you will love</h2>
+      <img class="img-circle" src="../../assets/images/dressing.jpeg" height="140px" width="140px">
+      <p>Avocado lime dressing that will make your taste buds dance</p>
+    </div>
+    <div class="col-md-4 text-center">
+      <h2 >Low Calorie Taco</h2>
+      <img class="img-circle" src="../../assets/images/easyTaco.jpg" height="140px" width="140px">
+      <p>Our Special taco for amazing customers on diet</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4 text-center">
+      <h2 >Signature Taco</h2>
+      <img class="img-circle" src="../../assets/images/chickenTaco.jpg" height="140px" width="140px">
+      <h2 >Ground Chicken Taco</h2>
+      <p>Ground chicken taco with our favourite cheese, sweet tomatoes, onion and pickle toppings</p>
+    </div>
+    <div class="col-md-4 text-center">
+      <h2 >Specialities</h2>
+      <img class="img-circle" src="../../assets/images/Quess.jpg" height="140px" width="140px">
+      <h2 >Chicken Quesadilla</h2>
+      <p>Combination of Monterey jack and cheddar with grilled chicken and caramelized onions</p>
+    </div>
+    <div class="col-md-4 text-center">
+      <h2 >Unlimited Toppings</h2>
+      <img class="img-circle" src="../../assets/images/salsa.jpg" height="140px" width="140px">
+      <p>Our Special corn salsa with pickled onlions and apple cider vinegar</p>
+    </div>
+  </div>
+</div>
