--- a/public/app/views/pages/users/register.html
+++ b/public/app/views/pages/users/register.html
@@ -1,7 +1,7 @@
-<div class="page-header">
+<section id="contact">
+<div class="user">
+
 <h2>User Registration</h2>
-</div>
-<br>
 
 <div class="jumbotron text-center" ng-show="register.loading">
 <p>Loading</p>
@@ -29,3 +29,6 @@
         <button class="btn btn-primary" type="submit">Register</button>
     </form>
 </div>
+</div>
+</section>
+
