--- a/public/app/views/pages/users/login.html
+++ b/public/app/views/pages/users/login.html
@@ -1,8 +1,7 @@
-<div class="page-header">
-    <h2>User Login</h2>
-    </div>
-    <br>
+<section id="contact">
+<div class="user">
     
+    <h2>User Login</h2>
     <div class="jumbotron text-center" ng-show="main.loading">
     <p>Loading</p>
     </div>
@@ -15,14 +14,21 @@
         <div class="alert alert-danger">{{main.errorMsg}}</div>
     </div>
     
-    <div>
-        <form ng-submit="main.doLogin(loginData)">
+    <div class="contact-wrapper">
+        <form class = "form" ng-submit="main.doLogin(loginData)">
             <label>Username </label>
-            <input class="form-control" type="text" name="username" ng-model = "main.loginData.username">
+            <div class="form__group">
+                <input class="form-control" type="text" name="username" ng-model = "main.loginData.username">
+            </div>
             <br>
             <label>Password </label>
+            <div class="form__group">
             <input class="form-control" type="password" name="password" ng-model = "main.loginData.password">
+            </div>
             <br>
             <button class="btn btn-primary" type="submit">Login</button>
         </form>
     </div>
+    
+</div>
+</section>
