--- a/public/app/views/pages/contact.html
+++ b/public/app/views/pages/contact.html
@@ -28,7 +28,7 @@
         
         <button class="btn btn-primary send-button" id="submit" type="submit" value="SEND">
           <div class="button">
-            <i class="fa fa-paper-plane"></i><span class="send-text">SEND</span>
+            <span class="send-text">SEND</span>
           </div>
         
         </button>
@@ -48,7 +48,7 @@
             
             <li class="list-item"><i class="fa fa-phone fa-2x"><span class="contact-text phone"><a href="tel:1-212-555-5555" title="Give me a call">(919) 111-2222</a></span></i></li>
             
-            <li class="list-item"><i class="fa fa-envelope fa-2x"><span class="contact-text gmail"><a href="mailto:#" title="Send me an email">fullstack@lataco.com</a></span></i></li>
+            <li class="list-item"><i class="fa fa-envelope fa-2x"><span class="contact-text gmail"><a href="mailto:#" title="Send me an email">fullstackprojectpdx@gmail.com</a></span></i></li>
             
           </ul>
   
