--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -20,6 +20,7 @@
 
     <script src="app/controllers/userCtrl.js"></script>
     <script src="app/controllers/mainCtrl.js"></script>
+    <script src="app/controllers/cartCtrl.js"></script>
 
     <script src="app/services/userServices.js"></script>
     <script src="app/services/authServices.js"></script>
