--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1042,6 +1042,13 @@ a.navbar-brand {
     
 }
 
+@media only screen and (max-width: 600px){
+    a.navbar-brand {
+        font-size: 30px;
+    }
+}
+
+
 .container {
     max-width: 100% !important; 
     padding-right: 0px !important;
@@ -1310,8 +1317,8 @@ a.navbar-brand {
   /* Location, Phone, Email Section */
   .contact-list {
     list-style-type: none;  
-    padding-right: 0px;
-   
+    margin-left: -30px;
+    padding-right: 20px;
   }
   
   .list-item {
