checkout status page

--- a/public/app/views/pages/checkoutStatus.html
+++ b/public/app/views/pages/checkoutStatus.html
@@ -1,4 +1,4 @@
-<div class="Page header">
+<div class="orderFinalcontainer">
   <div class="wrap">
   
     <svg  width="150" height="150" viewBox="0 0 100 100">
@@ -18,7 +18,6 @@
   </div>  
   
   <div class="orderSummary">
-  <h1>Order summary</h1>
   <div class="summary"></div>
   </div>
   
