--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1525,5 +1525,10 @@ a.navbar-brand {
         font-size: large;
     }
     
+    .orderFinalcontainer{
+        padding-top: 150px;
+        padding-bottom:400px;
+        background: linear-gradient(45deg, #49D49D 10%, #A2C7E5 90%);
+    }
     
     
