adding styles to checkout flow

--- a/public/app/views/pages/checkoutPayment.html
+++ b/public/app/views/pages/checkoutPayment.html
@@ -1,12 +1,12 @@
 <div class="Page header">
 
-  <section class="card__grid">
+  <section class="c_main card__grid">
        
-    <div class="row">
+    <!-- <div class="row">
 
         <div class="col-md-6 offset-md-3" class="form">
 
-      <form ng-submit="main.checkStatus(checkData);" autocomplete="off" class="cardPay-form">
+      <form ng-submit="main.checkStatus(checkData);" autocomplete="off">
 
             <h3 class="heading">Complete Yor Payment</h3>
             <img class="img-fluid cc-img" src="http://www.prepbootstrap.com/Content/images/shared/misc/creditcardicons.png">
@@ -14,7 +14,7 @@
           <div class="form-group">
               <label for="cc-number" class="control-label mb-1">Card Number</label>
               <input id="cc-number" name="cc-number" type="tel" class="form-control cc-number identified visa" placeholder="card number" required>
-              <!-- <span class="invalid-feedback">Enter a valid 12 to 16 digit card number</span> -->
+              
           </div>
 
             <div class="row">
@@ -23,7 +23,6 @@
                   <div class="form-group">
                       <label for="exp-date" class="control-label mb-1">Expiration</label>
                       <input id="exp-date" name="exp-date" type="tel" class="form-control exp-date" required placeholder="MM / YY">
-                      <!-- <span class="invalid-feedback">Enter the expiration date</span> -->
                   </div>
               </div>
 
@@ -31,7 +30,7 @@
                 <label for="cvv" class="control-label mb-1">CVV</label>
                 <div class="input-group">
                     <input id="cvv" name="cvv" type="tel" class="form-control cc-cvc" placeholder="cvv" required>
-                    <!-- <span class="invalid-feedback order-last">Enter the 3-digit code on back</span> -->
+                    
                 
                 </div>
             </div>
@@ -41,15 +40,60 @@
            <div class="form-group">
             <label for="cc-name" class="control-label mb-1">Name On Card</label>
             <input id="cc-name" name="cc-name" type="text" class="form-control" placeholder="card owner name">
-            <!-- <span class="help-block" data-valmsg-for="x_zip" data-valmsg-replace="true"></span> -->
         </div>
         
             <div class="form-group">
                 <button type="submit" class="btn btn-primary" class="mak_pay"><i class="fa fa-credit-card"></i> Make Payment</button>
             </div>
-        </form>
-  
+        </form> -->
+        <form ng-submit="main.checkStatus(checkData);" autocomplete="off">
 
+        <div class="c_row c_body">
+          <div class="c_col-75">
+            <div class="c_container">
+              <form action="">
+              
+                <div class="c_row">
+        
+                  <div class="c_col-50">
+                    <h3>Payment</h3>
+                    <label for="fname">Accepted Cards</label>
+                    <div class="c_icon-container">
+                      <i class="fa fa-cc-visa" style="color:navy;"></i>
+                      <i class="fa fa-cc-amex" style="color:blue;"></i>
+                      <i class="fa fa-cc-mastercard" style="color:red;"></i>
+                      <i class="fa fa-cc-discover" style="color:orange;"></i>
+                    </div>
+                    <label for="cname">Name on Card</label>
+                    <input type="text" id="cname" name="cardname" placeholder="John More Doe">
+                    <label for="ccnum">Credit card number</label>
+                    <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
+                    <label for="expmonth">Exp Month</label>
+                    <input type="text" id="expmonth" name="expmonth" placeholder="September">
+                    <div class="c_row">
+                      <div class="c_col-50">
+                        <label for="expyear">Exp Year</label>
+                        <input type="text" id="expyear" name="expyear" placeholder="2018">
+                      </div>
+                      <div class="c_col-50">
+                        <label for="cvv">CVV</label>
+                        <input type="text" id="cvv" name="cvv" placeholder="352">
+                      </div>
+                    </div>
+                  </div>
+                  
+                </div>
+                <label>
+                  <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
+                </label>
+                <input type="submit" value="Continue to checkout" class="c_btn">
+              </form>
+            </div>
+          </div>
+          
+        </div>
+  
+</form>
 </section>
 
   </div>
