--- a/public/app/views/pages/checkout.html
+++ b/public/app/views/pages/checkout.html
@@ -1,21 +1,22 @@
 <div class="Page header">
 
+  <div class="c_main">
   <!--A grid container to hold the checkout options provider form. 1. PickUp 2. Delivery-->
   
-    <section class="grid-container" >
+    <section class="c_grid-container" >
   
-      <div class="heading" ><h4>How do you want to get your Meal?</h4></div>
+      <div class="c_heading" ><h4>How do you want to get your Meal?</h4></div>
       
       <!--1st option = pick up-->  
   
-        <div class="radio Button1">
+        <div class="radio c_Button1">
           <input ng-model="selection" type="radio" id='pickUp' name='checkOutOption' value="Pick Up">
           <label for='pickUp'><b>Pick Up From Store.</b></label>
         </div>
   
       <!--2nd option = Delivery--> 
   
-        <div class="radio Button2">
+        <div class="radio c_Button2">
           <input ng-model="selection" type="radio" id='Delivery' name='checkOutOption' value="Delivery">
           <label for='Delivery'><b>Deliver To Your Home?</b></label>
         </div>
@@ -31,11 +32,11 @@
   
       <!--1st switch = pich Up switch-->
   
-      <div ng-switch-when="Pick Up" class="pu">
+      <div ng-switch-when="Pick Up" class="c_pu">
   
         <section class="pickup-grid-container">
   
-          <div class="puheading" ><h4>Pick Up Time?</h4></div>
+          <div class="c_puheading" ><h4>Pick Up Time?</h4></div>
   
             <div class="select-option">  
             
@@ -61,7 +62,7 @@
                   <option value="07:30PM">07:30 PM</option>
                 </select></br></br>
             
-                <button id="select-ok" class="select-ok" class=" btn btn-primary mb-2" type="submit" >Proceed</button>
+                <button id="select-ok" class=" btn btn-primary mb-2 select-ok" type="submit" >Proceed</button>
              
               </form>
             
@@ -79,25 +80,24 @@
         
         <section class="Delivery__grid">
   
-          <form ng-submit="main.doPay(payData);">
+          <form class="c_form" ng-submit="main.doPay(payData);">
            
             <div class="codheading" ><h2>Delivary Address</h2></div> 
   
              <div class="form-group">
-               <input type="text" placeholder="Address Line 1" name="addressLine1" class="form__input" id="Addr1" ng-model = "main.payData.addr1" required/>
+               <input type="text" placeholder="Address Line 1" name="addressLine1" class="c_form__input" id="Addr1" ng-model = "main.payData.addr1" required/>
               </div>
   
               <div class="form-group">
-                <input type="text" placeholder="Address Line 2" name="addressLine2" class="form__input" id="Addr2" ng-model = "main.payData.addr2" required/>
+                <input type="text"  placeholder="Address Line 2" name="addressLine2" class="c_form__input" id="Addr2" ng-model = "main.payData.addr2" required/>
                </div>
   
                <div class="form-group">
-                <input type="number" placeholder="Phone Number" name="phoneNumber" class="form__input" id="pno" ng-model = "main.payData.phno" required/>
+                <input type="phoneNumber"  placeholder="Phone Number" name="phoneNumber" class="c_form__input" id="pno" ng-model = "main.payData.phno" required/>
                </div>
       
              <div class = "btn btn-toolbar" id="buttons">
-               <button id="submit" class=" btn btn-primary mb-2" type="submit" >Submit</button>
-               <button id="reset" class=" btn btn-secondary mb-2" type="reset" >Reset</button>
+               <button id="submit" class=" btn btn-primary mb-2 c_btn" type="submit" >Submit</button>
              </div> 
   
           </form>
@@ -106,6 +106,7 @@
   
       </div>
   
+    </div>
     </div>
   
   </div>
