--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1649,5 +1649,137 @@ checkout page css
     }
 }
 
+/* 
+.c_row {
+    display: -ms-flexbox; 
+    display: flex;
+    -ms-flex-wrap: wrap; 
+    flex-wrap: wrap;
+    margin: 0 -16px;
+  }
+  
+  .c_col-25 {
+    -ms-flex: 25%;
+    flex: 25%;
+  }
+  
+  .c_col-50 {
+    -ms-flex: 50%; 
+    flex: 50%;
+  }
+  
+  .c_col-75 {
+    -ms-flex: 75%; 
+    flex: 75%;
+  }
+  
+  .c_col-25,
+  .c_col-50,
+  .c_col-75 {
+    padding: 0 16px;
+  }
+  
+  .c_container {
+    background-color: #f2f2f2;
+    padding: 5px 20px 15px 20px;
+    border: 1px solid lightgrey;
+    border-radius: 3px;
+  }
+  
+  input[type=text] {
+    width: 95%;
+    margin-bottom: 20px;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+  }
+  
+  label {
+    margin-bottom: 10px;
+    display: block;
+  }
+  
+  .c_icon-container {
+    margin-bottom: 20px;
+    padding: 7px 0;
+    font-size: 24px;
+  }
+  
+  .c_btn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px;
+    margin: 10px 0;
+    border: none;
+    width: 100%;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 17px;
+  }
+  
+  .c_btn:hover {
+    background-color: #45a049;
+  }
+  
+  @media (max-width: 800px) {
+    .c_row {
+      flex-direction: column-reverse;
+    }
+    .c_col-25 {
+      margin-bottom: 20px;
+    }
+  }
+  
+  .c_body{
+    align-content: left;
+  }
 
-    
+  .wrap{
+    margin: 100px;
+    margin-top: 0px;
+    margin-left: 350px;
+    margin-bottom: 30px;
+  }
+  
+  #mycircle{
+    stroke-dashoffset: 800;
+    stroke-dasharray: 800;
+    animation-name: padda;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+  }
+  
+  #mycheck{
+    stroke-dashoffset: 800;
+    stroke-dasharray: 800;
+    animation-name: padda;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 1s;
+    animation-fill-mode: forwards;
+  }
+  
+  @keyframes padda{
+    to{
+      stroke-dashoffset: 0;
+    }
+  }
+  
+  .statement {
+    animation-duration: 3s;
+    animation-name: slidein;
+  }
+  
+  @keyframes slidein {
+    from {
+      margin-left: 100%;
+      width: 300%; 
+    }
+  
+    to {
+      margin-left: 0%;
+      width: 100%;
+    }
+  }
+     */
