--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
 
-    <title>Index</title>
+    <title>La Taco</title>
 
 </head>
 
@@ -75,11 +75,7 @@
                     <li class="ngnav nav2">
                         <a ng-show="main.isLoggedIn" class="page-scroll" href="/placeOrder">Order</a>
                     </li>
-
-                    <li class="ngnav nav1">
-                        <a class="page-scroll" href="/hireMe">Hire Me</a>
-                    </li>
-
+                    
                     <li class="ngnav nav2">
                         <a ng-show="!main.isLoggedIn" class="page-scroll" href="/login">Login</a>
                     </li>
@@ -154,6 +150,10 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
+                        <li><a href="/hireMe">Hire Me</a>
+                        </li>
+                        <li><a href="/faq">FAQ</a>
+                        </li>
                         <li><a href="#">Privacy Policy</a>
                         </li>
                         <li><a href="#">Terms of Use</a>
